Updated to Spring Boot 3.2.10